--- a/product-detail.html
+++ b/product-detail.html
@@ -24,6 +24,76 @@
                 <a href="#" class="nav-bar__item">"Tên sản phẩm"</a>
             </div>
         </section>
+        <section class="container-f bg-gray product-page__padding">
+            <div class="flex flex-col container-l">
+                <h1>KOMBUCHA ROSÉ JANSLENMEN</h1>
+                <div class="flex center-ver product-detail__function">
+                    <img src="./img/icon/star.svg" alt="">
+                    <p>( Xem 20 đánh giá )</p>
+                    <button class="flex btn-like product-detail__btn">
+                        <i>Thích</i>
+                        <i>5</i>
+                    </button>
+                    <button class="flex btn-share product-detail__btn active">
+                        <i>Chia sẽ</i>
+                    </button>
+                </div>
+                <div class="flex product-container">
+                    <div class="product-container__image flex flex-col bg-white">
+                        <div class="flex center-ver product-image">
+                            <button>
+                                <img src="./img/icon/chevron-left-product.svg" alt="">
+                            </button>
+                            <img src="./img/product/item-1.svg" alt="">
+                            <button>
+                                <img src="./img/icon/chevron-right-product.svg" alt="">
+                            </button>
+                        </div>
+                        <div class="center-hor flex product-image__side">
+                            <div class="product-image__item">
+                                <img src="./img/product/item-1.svg" alt="">
+                            </div>
+                            <div class="product-image__item">
+                                <img src="./img/product/item-1.svg" alt="">
+                            </div>
+                            <div class="product-image__item">
+                                <img src="./img/product/item-1.svg" alt="">
+                            </div>
+                            <div class="product-image__item">
+                                <img src="./img/product/item-1.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-container__info flex flex-col bg-white">
+                        <div class="flex flex-col product-container__price">
+                            <p>Giá sản phẩm</p>
+                            <div class="product-price flex">
+                                <b>65.000đ</b>
+                                <span>120.000đ</span>
+                            </div>
+                        </div>
+                        <div class="product-container__combo flex flex-col">
+                            <b>Phân loại</b>
+                            <div class="flex all-combo">
+                                <div class="combo-item active">
+                                    <p>1 chai</p>
+                                </div>
+                                <div class="combo-item ">
+                                    <p>Combo 6 chai</p>
+                                </div>
+                            </div>
+                            <b>Ưu đãi</b>
+                            <p>Miễn phí giao hàng với hóa đơn từ 500.000đ</p>
+                            <p>Khác biệt làm từ nước trái cây, các loại khoán cali, manhe , canxi, giàu chất chống oxi
+                                hóa, có nhiều lợ khoaanr hoàn toàn..., giàu các loại khoáng, cali manhe canxi và chứa
+                                nhiều lợi khuẩn.</p>
+                            <a href="#" class="product-btn">Mua ngay tại Wellbe</a>
+                            <span class="product-icon">Gọi đặt mua 0971077678 ( 8:00 21:30 )</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="flex flex-col container-l product-page__intro bg-white product-page__padding">
             <div class="flex center-ver product-page__share">
                 <i>Vũ Duy 22/1/2025</i>
