--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
             </div>
         </section>
         <section class="container-f flex flex-col bg-gray advise-container ">
-            <div class="container-xs bg-white flex advise-contact" data-include="./component/healthconsulting.html"></div>
+            <div class="container-xs bg-white flex advise-contact" data-include="./component/healthconsulting.html">
+            </div>
             <div class="container-xs flex why-choose ">
                 <div class="why-choose__image">
                     <img src="./img/image-new/image-why.svg" alt="">
@@ -102,43 +103,45 @@
                 <h2>sản phẩm nổi bật</h2>
                 <img src="./img/icon/Vector.webp" alt="">
             </div>
-            <div class="container-l flex center-hor product-type">
-                <a class="product-type__item flex flex-col center-ver">
-                    <img src="./img/product/kumpucha.webp" alt="">
-                    <b>Kombucha</b>
-                </a>
-                <a class="product-type__item flex flex-col center-ver">
-                    <img src="./img/product/kumpucha.webp" alt="">
-                    <b>Mật chuối</b>
-                </a>
-                <a class="product-type__item flex flex-col center-ver">
-                    <img src="./img/product/kumpucha.webp" alt="">
-                    <b>Juice</b>
-                </a>
-                <a class="product-type__item flex flex-col center-ver">
-                    <img src="./img/product/kumpucha.webp" alt="">
-                    <b>Bỏng gạo dinh dưỡng</b>
-                </a>
-                <a class="product-type__item flex flex-col center-ver">
-                    <img src="./img/product/kumpucha.webp" alt="">
-                    <b>Sen</b>
-                </a>
-                <a class="product-type__item flex flex-col center-ver">
-                    <img src="./img/product/kumpucha.webp" alt="">
-                    <b>Cafe</b>
-                </a>
-                <a class="product-type__item flex flex-col center-ver">
-                    <img src="./img/product/kumpucha.webp" alt="">
-                    <b>Chăm sóc da và làm đẹp</b>
-                </a>
-                <a class="product-type__item flex flex-col center-ver">
-                    <img src="./img/product/kumpucha.webp" alt="">
-                    <b>Gia vị</b>
-                </a>
-                <a class="product-type__item flex flex-col center-ver">
-                    <img src="./img/product/kumpucha.webp" alt="">
-                    <b>Dinh dưỡng và sức khỏe</b>
-                </a>
+            <div class="container-l product-container__mb">
+                <div class="container-l flex product-type">
+                    <a class="product-type__item flex flex-col center-ver">
+                        <img src="./img/product/kumpucha.webp" alt="">
+                        <b>Kombucha</b>
+                    </a>
+                    <a class="product-type__item flex flex-col center-ver">
+                        <img src="./img/product/kumpucha.webp" alt="">
+                        <b>Mật chuối</b>
+                    </a>
+                    <a class="product-type__item flex flex-col center-ver">
+                        <img src="./img/product/kumpucha.webp" alt="">
+                        <b>Juice</b>
+                    </a>
+                    <a class="product-type__item flex flex-col center-ver">
+                        <img src="./img/product/kumpucha.webp" alt="">
+                        <b>Bỏng gạo dinh dưỡng</b>
+                    </a>
+                    <a class="product-type__item flex flex-col center-ver">
+                        <img src="./img/product/kumpucha.webp" alt="">
+                        <b>Sen</b>
+                    </a>
+                    <a class="product-type__item flex flex-col center-ver">
+                        <img src="./img/product/kumpucha.webp" alt="">
+                        <b>Cafe</b>
+                    </a>
+                    <a class="product-type__item flex flex-col center-ver">
+                        <img src="./img/product/kumpucha.webp" alt="">
+                        <b>Chăm sóc da và làm đẹp</b>
+                    </a>
+                    <a class="product-type__item flex flex-col center-ver">
+                        <img src="./img/product/kumpucha.webp" alt="">
+                        <b>Gia vị</b>
+                    </a>
+                    <a class="product-type__item flex flex-col center-ver">
+                        <img src="./img/product/kumpucha.webp" alt="">
+                        <b>Dinh dưỡng và sức khỏe</b>
+                    </a>
+                </div>
             </div>
             <h3>sản phẩm nổi bật</h3>
             <div class="product-tab__container flex center-hor">
