--- a/product-detail.html
+++ b/product-detail.html
@@ -54,20 +54,20 @@
                                 <img src="./img/product/item-1.svg" alt="">
                             </div>
                             <div class="product-image__item">
-                                <img src="./img/product/item-1.svg" alt="">
+                                <img src="./img/product/item-2.svg" alt="">
                             </div>
                             <div class="product-image__item">
-                                <img src="./img/product/item-1.svg" alt="">
+                                <img src="./img/product/item-3.svg" alt="">
                             </div>
                             <div class="product-image__item">
-                                <img src="./img/product/item-1.svg" alt="">
+                                <img src="./img/product/item-4.svg" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="product-container__info flex flex-col bg-white">
                         <div class="flex flex-col product-container__price">
                             <p>Giá sản phẩm</p>
-                            <div class="product-price flex">
+                            <div class="product-price center-ver flex">
                                 <b>65.000đ</b>
                                 <span>120.000đ</span>
                             </div>
