--- a/index.html
+++ b/index.html
@@ -61,25 +61,6 @@
                 </div>
             </div>
         </section>
-        <section class="container-f flex flex-col bg-gray advise-container ">
-            <div class="container-xs bg-white flex advise-contact" data-include="./component/healthconsulting.html">
-            </div>
-            <div class="container-xs flex why-choose ">
-                <div class="why-choose__image">
-                    <img src="./img/image-new/image-why.svg" alt="">
-                </div>
-                <div class="flex flex-col why-choose__content">
-                    <h2>Vì sao bạn nên sử dụng Kombucha mỗi ngày?</h2>
-                    <ul>
-                        <li>Cân bằng hệ tiêu hóa</li>
-                        <li>Tăng cường miễn dịch</li>
-                        <li>Giải khát lành mạnh</li>
-                        <li>Năng lượng tươi mới</li>
-                        <li>Nuôi dưỡng lối sống mindful</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
         <section class="container-f flex flex-col bg-white center-ver toppage-product__container">
             <div class="container-l flex center-hor product-quality">
                 <div class="product-quality__item flex bg-primary center-ver">
@@ -87,7 +68,7 @@
                     <p>Tự nhiên</p>
                 </div>
                 <div class="product-quality__item flex bg-primary center-ver">
-                    <img src="./img/icon/natural-icon.svg" alt="">
+                    <img src="./img/icon/tradition-icon.svg" alt="">
                     <p>Truyền thống</p>
                 </div>
                 <div class="product-quality__item flex bg-primary center-ver">
@@ -229,6 +210,25 @@
                         </div>
                     </div>
                 </a>
+            </div>
+        </section>
+        <section class="container-f flex flex-col bg-gray advise-container ">
+            <div class="container-xs bg-white flex advise-contact" data-include="./component/healthconsulting.html">
+            </div>
+            <div class="container-xs flex why-choose ">
+                <div class="why-choose__image">
+                    <img src="./img/image-new/image-why.svg" alt="">
+                </div>
+                <div class="flex flex-col why-choose__content">
+                    <h2>Vì sao bạn nên sử dụng Kombucha mỗi ngày?</h2>
+                    <ul>
+                        <li>Cân bằng hệ tiêu hóa</li>
+                        <li>Tăng cường miễn dịch</li>
+                        <li>Giải khát lành mạnh</li>
+                        <li>Năng lượng tươi mới</li>
+                        <li>Nuôi dưỡng lối sống mindful</li>
+                    </ul>
+                </div>
             </div>
         </section>
         <section class="container-f bg-gray flex flex-col feedback-container">
@@ -387,6 +387,38 @@
         </section>
     </main>
     <footer class="container-f bg-white center-ver" data-include="./component/footer.html"></footer>
+    <section class="gallery-section container-f">
+        <div class="container flex flex-col ">
+            <h2 class="gallery-title">Thư viện hình ảnh</h2>
+
+            <!-- Slider chính -->
+            <div class="gallery-slider-for center-ver container-xs">
+                <div><img src="./img/image-new/cung-ly.webp" alt="Gallery 1"></div>
+                <div><img src="./img/image-new/cung-ly.webp" alt="Gallery 2"></div>
+                <div><img src="./img/image-new/cung-ly.webp" alt="Gallery 3"></div>
+                <div><img src="./img/image-new/cung-ly.webp" alt="Gallery 4"></div>
+                <div><img src="./img/image-new/cung-ly.webp" alt="Gallery 5"></div>
+            </div>
+
+            <!-- Slider thumbnail -->
+            <div class="gallery-slider-nav">
+                <div><img src="./img/image-new/cung-ly.webp" alt="Gallery 1"></div>
+                <div><img src="./img/image-new/cung-ly.webp" alt="Gallery 2"></div>
+                <div><img src="./img/image-new/cung-ly.webp" alt="Gallery 3"></div>
+                <div><img src="./img/image-new/cung-ly.webp" alt="Gallery 4"></div>
+                <div><img src="./img/image-new/cung-ly.webp" alt="Gallery 5"></div>
+            </div>
+            <button class="btn-prev flex center-ver center-hor">
+                <img src="./img/icon/chevron-left-product.svg" alt="">
+            </button>
+            <button class="btn-next flex center-ver center-hor">
+                <img src="./img/icon/chevron-right-product.svg" alt="">
+            </button>
+            <button class="btn-close flex center-ver center-hor">
+                <img src="./img/icon/close.svg" alt="">
+            </button>
+        </div>
+    </section>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
