--- a/index.html
+++ b/index.html
@@ -384,6 +384,11 @@
                     </div>
                 </div>
             </div>
+            <div class="container-xs flex center-hor">
+                <a class="flex center-ver news-readmore">
+                    Xem thêm
+                </a>
+            </div>
         </section>
     </main>
     <footer class="container-f bg-white center-ver" data-include="./component/footer.html"></footer>
