--- a/product-detail.html
+++ b/product-detail.html
@@ -38,7 +38,7 @@
                         <i>Chia sẽ</i>
                     </button>
                 </div>
-                <div class="flex product-container">
+                <div class="flex product-detail__container">
                     <div class="product-container__image flex flex-col bg-white">
                         <div class="flex center-ver product-image">
                             <button>
@@ -84,7 +84,8 @@
                             </div>
                             <b>Ưu đãi</b>
                             <p>Miễn phí giao hàng với hóa đơn từ 500.000đ</p>
-                            <p>Khác biệt làm từ nước trái cây, các loại khoán cali, manhe , canxi, giàu chất chống oxi
+                            <b>Khác biệt</b>
+                            <p>Làm từ nước trái cây, các loại khoán cali, manhe , canxi, giàu chất chống oxi
                                 hóa, có nhiều lợ khoaanr hoàn toàn..., giàu các loại khoáng, cali manhe canxi và chứa
                                 nhiều lợi khuẩn.</p>
                             <a href="#" class="product-btn">Mua ngay tại Wellbe</a>
