--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <h3>sản phẩm nổi bật</h3>
-            <div class="product-tab__container flex center-hor">
+            <div class="product-tab__container container-m flex center-hor">
                 <button class="product-tab__button active">Sản phẩm bán chạy</button>
                 <button class="product-tab__button ">Sản phẩm mới</button>
             </div>
