--- a/knowledge.html
+++ b/knowledge.html
@@ -26,7 +26,7 @@
         <section class="container-f flex flex-col bg-white news-page__container">
             <div class="container-l flex">
                 <div class="news-leftside flex flex-col">
-                    <h2>tin tức</h2>
+                    <h2>Kiên thức</h2>
                     <div class="flex news-leftside__top">
                         <div class="news-leftside__larger">
                             <a href="./blogdetail.html" class="news__item flex flex-col">
