--- a/blogdetail.html
+++ b/blogdetail.html
@@ -143,6 +143,19 @@
                         và thưởng thức – biết đâu, bạn sẽ tìm thấy “người bạn đồng hành” hoàn hảo
                         cho hành trình sống khỏe mạnh của mình.
                     </p>
+                    <div class="flex container-f blog-author__container">
+                        <div class="blog-author__avatar flex center-hor">
+                            <img src="./img/logo/logo-top.webp" alt="">
+                        </div>
+                        <div class="blog-author__content flex flex-col">
+                            <h3>Nhân viên tư vấn Atisha</h3>
+                            <p>Tôi là Vũ Duy, vơi hơn 10 năm kinh nghiệm chuyên sâu lĩnh vực dinh dưỡng. Trong suốt thời
+                                gian
+                                đó, tôi đã làm việc tại Atisha với sư cách chuyên viên tư vấn sản phẩm, và hướng dẫn cho
+                                người
+                                dùng lựa chọn được sản phẩm phù hợp với yêu cầu của họ....</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="flex flex-col news-rightside">
                     <h3>Sản phẩm nổi bật</h3>
