--- a/product-detail.html
+++ b/product-detail.html
@@ -26,17 +26,19 @@
         </section>
         <section class="container-f bg-gray product-page__padding">
             <div class="flex flex-col container-l">
-                <h1>KOMBUCHA ROSÉ JANSLENMEN</h1>
-                <div class="flex center-ver product-detail__function">
-                    <img src="./img/icon/star.svg" alt="">
-                    <p>( Xem 20 đánh giá )</p>
-                    <button class="flex btn-like product-detail__btn">
-                        <i>Thích</i>
-                        <i>5</i>
-                    </button>
-                    <button class="flex btn-share product-detail__btn active">
-                        <i>Chia sẽ</i>
-                    </button>
+                <div class="product-detail__content">
+                    <h1>KOMBUCHA ROSÉ JANSLENMEN</h1>
+                    <div class="flex center-ver product-detail__function">
+                        <img src="./img/icon/star.svg" alt="">
+                        <p>( Xem 20 đánh giá )</p>
+                        <button class="flex btn-like product-detail__btn">
+                            <i>Thích</i>
+                            <i>5</i>
+                        </button>
+                        <button class="flex btn-share product-detail__btn active">
+                            <i>Chia sẽ</i>
+                        </button>
+                    </div>
                 </div>
                 <div class="flex product-detail__container">
                     <div class="product-container__image flex flex-col bg-white">
@@ -65,6 +67,20 @@
                         </div>
                     </div>
                     <div class="product-container__info flex flex-col bg-white">
+                        <div class="product-detail__contentMB">
+                            <h1>KOMBUCHA ROSÉ JANSLENMEN</h1>
+                            <div class="flex center-ver product-detail__function">
+                                <img src="./img/icon/star.svg" alt="">
+                                <p>( Xem 20 đánh giá )</p>
+                                <button class="flex btn-like product-detail__btn">
+                                    <i>Thích</i>
+                                    <i>5</i>
+                                </button>
+                                <button class="flex btn-share product-detail__btn active">
+                                    <i>Chia sẽ</i>
+                                </button>
+                            </div>
+                        </div>
                         <div class="flex flex-col product-container__price">
                             <p>Giá sản phẩm</p>
                             <div class="product-price center-ver flex">
